[gd_scene load_steps=2 format=3 uid="uid://8hvcepoavo35"]

[ext_resource type="Script" uid="uid://bx5r5jb2cvncy" path="res://scenes/Menu/menu.gd" id="1_ic5kw"]

[node name="Mainmenu" type="CanvasLayer"]
script = ExtResource("1_ic5kw")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.48452926, 0.48452926, 0.58383155, 1)

[node name="LogoLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -111.0
offset_top = 100.0
offset_right = 111.0
offset_bottom = 160.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "PROYECTO T"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -106.0
offset_right = 100.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 20.0
alignment = 1

[node name="NewGameButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "NEW GAME"

[node name="ContinueButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "CONTINUE"

[node name="ExitButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "EXIT"

[node name="VersionLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.5)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -147.0
offset_top = -92.0
offset_right = -51.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
text = "v0.0.1"
